# Ebrahim_Master_Thesis_repo

./: IPG_waypoint.csv  README.md  driving_style1.csv  driving_style2.csv  environment.yml  makefile  reproducing and conclusion [Draft].odt  wp_file.csv
On-Track-SysID/: CMakeLists.txt  package.xml
On-Track-SysID/launch/: sys_id.launch  sys_id.launch.py
On-Track-SysID/models/SIM/: NUCx_on_track_pacejka_lookup_table.csv  SIM_pacejka.txt  reproducing and conclusion [Draft].odt
On-Track-SysID/params/: nn_params.yaml
On-Track-SysID/src/: on_track_sys_id.py
On-Track-SysID/src/helpers/: load_model.py  save_model.py  simulate_model.py  train_model.py
deep-dynamics/: requirements.txt
deep-dynamics/bayesrace/: setup.py
deep-dynamics/bayesrace/bayes_race.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
deep-dynamics/deep_dynamics.egg-info/: SOURCES.txt
deep-dynamics/deep_dynamics/data/: DYN-NMPC-NOCONS-ETHZMobil-DEEP-DYNAMICS.npz
deep-dynamics/deep_dynamics/mpc/: run_nmpc_orca_deep_dynamics.py
deep-dynamics/deep_dynamics/output/deep_dynamics/ddm_sim_repro_v3/: scaler.pkl
docker/: docker_compose.yml  dockerfile
f1tenth_simulator/: CMakeLists.txt  package.xml  params.yaml
f1tenth_simulator/include/f1tenth_simulator/: channel.h
f1tenth_simulator/launch/: racecar_model.launch.py  simulator.launch.py  simulator.rviz
f1tenth_simulator/node/: behavior_controller.cpp  keyboard.cpp  mux.cpp  random_walk.cpp  simulator.cpp
joy_to_ackermann/: CMakeLists.txt  package.xml
joy_to_ackermann/config/: params.yaml
joy_to_ackermann/include/joy_to_ackermann/: joy_to_ackermann.hpp
joy_to_ackermann/launch/: joy_to_ackermann_launch.py
joy_to_ackermann/src/: joy_to_ackermann.cpp  joy_to_ackermann_node.cpp
pure_pursuit/: CMakeLists.txt  package.xml
pure_pursuit/launch/: pure_pursuit.launch.py
pure_pursuit/src/: noetic_pure_pursuit.py  plotter.py  pure_pursuit_node.py  waypoint_logger.py  wp_file.csv
twist_to_ackermann/: CMakeLists.txt  verify_twist.sh
twist_to_ackermann/config/: params.yaml
twist_to_ackermann/include/twist_to_ackermann/: tta.hpp
twist_to_ackermann/launch/: twist_to_ackermann.launch.py
twist_to_ackermann/src/: twist_to_ackermann.cpp
