<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>f1tenth_simulator</name>
  <version>0.0.1</version>
  <description>A simulator of the F1TENTH racecar for ROS2.</description>

  <maintainer email="billyzheng.bz@gmail.com">Hongrui Zheng</maintainer>
  <maintainer email="jauckley@seas.upenn.edu">Joe Auckley</maintainer>
  <!-- Thank you: https://github.com/mit-racecar/racecar_simulator -->

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build and runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>

  <!-- For finding package share directory -->
  <depend>ament_index_cpp</depend>

  <!-- For URDF/Xacro -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- External dependencies -->
  <exec_depend>joy</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
